welcome.lessons.welcome.methods.picture.MethodsPicture.scala.error
MethodsPicture:1: error: '=' expected but ')' found.
def avancex5) {
            ^MethodsPicture:7: error: illegal start of simple expression
def brosse() {
^MethodsPicture:49: error: ';' expected but ')' found.
  avancex5);
          ^